tests/ui/zod/fail/missing_namespace.rs
use zod::RequestType;

#[derive(RequestType)]
struct Test(usize);

fn main() {}
